# convert

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
mrx/convert/: mm.py  test.txt
mrx/convert/tmpl/: mindmap.mako
