[tool.poetry]
name = "convert"
version = "0.0.1"
description = "tools to convert text into mind map xml etc..."
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mrx"}]

[tool.poetry.dependencies]
mako = "^1.3.6"
mergedeep = "^1.3.4"
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.scripts]
txt2mm = "mrx.convert.mm:txt2mm"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
